--- a/sathak/index.html
+++ b/sathak/index.html
@@ -8,8 +8,10 @@
         <link href="bootstrapfile/bootstrap-4.3.1-dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link href="bootstrapfile/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Aclonica|Black+Ops+One|Bungee+Inline|Fugaz+One|Love+Ya+Like+A+Sister|Luckiest+Guy|Press+Start+2P|Quando|Righteous|Shojumaru&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <style>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">       
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width,initial scale=1"/>       
+ <style>
             #btn{
                 margin-top:30px;
             }
@@ -36,38 +38,38 @@
     <body>
         <div class="container-fluid">
             <div class="row" style="height:200px">
-                <div class="col-lg-3">
+                <div class="col-sm-3">
                     <img src="Sarthak/mainlogo.png" width="180px" height="170px"/>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-sm-2">
 
                 </div>
-                <div class="col-lg-2">
+                <div class="col-sm-2">
                     <a href="index.html">          <input type="button" class="btn btn-primary" value="HOME" id="btn"> </a>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-sm-2">
                     <input type="button" class="btn btn-primary" value="CONTACT US" id="btn">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-sm-2">
                     <input type="button" class="btn btn-primary" value="SUPPORT" id="btn">
                 </div>
             </div>
            
             
                 <div class="row" style="height:400px" id="row2">
-                    <div class="col-lg-3"> 
+                    <div class="col-sm-3"> 
                         <img src="Sarthak/img1.jpg" width="280px" height="280px" id="image"/>
 
                     </div>
-                    <div class="col-lg-3"> 
+                    <div class="col-sm-3"> 
                         <img src="Sarthak/img2.jpg" width="280px" height="280px"id="image"/>
 
                     </div>
-                    <div class="col-lg-3"> 
+                    <div class="col-sm-3"> 
                         <img src="Sarthak/img3.jpg" width="280px" height="280px" id="image"/>
 
                     </div>
-                    <div class="col-lg-3"> 
+                    <div class="col-sm-3"> 
                         <img src="Sarthak/img4.jpg" width="280px" height="280px" id="image"/>
 
                     </div>
@@ -79,12 +81,12 @@
             <br>
             <hr>
                 <div class="row" id="footer" style="height:200px;">
-                    <div class="col-lg-3">
+                    <div class="col-sm-3">
                         <br>
-                                       <img src="sarthak/mainlogo.png"    width="210px" height="180px"/> 
+                                       <img src="Sarthak/mainlogo.png"    width="210px" height="180px"/> 
 
                     </div>
-                    <div class="col-lg-5" >
+                    <div class="col-sm-5" >
                         <br>
                         <li class="lii" style="margin-left:60px;font-family:'Quando';"> 
                             CONTACT US
@@ -100,7 +102,7 @@
                             Email Address : eiexports1@gmail.com
                         </li>
                 </div>
-                    <div class='col-lg-4' >
+                    <div class='col-sm-4' >
                         <li class='lii'   style="margin-top:20px;">
                             SOCIAL MEDIA
                         </li>
